--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,10 @@
 @tailwind utilities;
 
 body {
-  /* background-color: #FD2C2A; */
+  transition: all cubic-bezier(0.23, 1, 0.32, 1) 1s;
   background-color: #000;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
 }
 
 canvas {
